--- a/sass/layout/_qualities.scss
+++ b/sass/layout/_qualities.scss
@@ -23,6 +23,7 @@
 
 .qualities__subtitle {
   margin-bottom: 10px;
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--title-text-color);
